# chassis

./: .env.example  .gitignore  README.md  netlify.toml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/cockpit/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/cockpit/src/: App.tsx  Deposit.tsx  Gate.tsx  demo.ts  main.tsx  styles.css
apps/cockpit/src-tauri/: Cargo.toml  tauri.conf.json
apps/cockpit/src-tauri/src/: main.rs
apps/cockpit/src/__tests__/: data.test.ts  i18n.test.ts
apps/cockpit/src/lib/: data.ts  demoLoop.ts  i18n.tsx  supabase.ts  useCockpit.ts
apps/daemon/: README.md  package.json  tsconfig.json
apps/daemon/data/history/: h1-assiette-ok.json  h2-assiette-rejet.json  h3-subrogation-ok.json  h4-subrogation-rejet.json
apps/daemon/samples/: dossier-conseil.json  dossier-dsn.json  dossier-ij.json
apps/daemon/src/: daemon.ts  main.ts  rules.ts  store.ts  types.ts
apps/daemon/src/__tests__/: daemon.test.ts
apps/site/: index.html  template.html
apps/site/i18n/: en.json  es.json  fr.json  zh.json
docs/: DEPLOYMENT.md  DOCTRINE.md  VISION.md
scripts/: assemble.mjs  build-site.mjs  build-site.test.mjs  install-daemon-service.sh
supabase/: schema.sql
