# Coque desktop CHASSIS (Tauri v2).
# Seul Rust du projet — généré par le framework, on n'y écrit pas de logique.
[package]
name = "chassis-cockpit"
version = "0.1.0"
edition = "2021"

[lib]
name = "chassis_cockpit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
